--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="wrapper">
                     <div class="tombol tombol-aktif tombol-angka bg-dark-blue">0</div>
-                    <div class="tombol tombol-aktif bg-dark-brown">.</div>
+                    <div class="tombol tombol-aktif tombol-desimal bg-dark-brown">.</div>
                     <div class="tombol tombol-aktif tombol-operasi bg-purple">+</div>
                     <div class="tombol tombol-aktif tombol-operasi bg-purple">-</div>
                 </div>
